--- a/xmas-thing/public/styles/main.css
+++ b/xmas-thing/public/styles/main.css
@@ -5,6 +5,10 @@ body {
   color: #f1f1f1;
 }
 
+button {
+  font-family: 'HKSerif', serif;
+}
+
 * {
   box-sizing: border-box;;
 }
@@ -49,7 +53,10 @@ h1, h2, h3 {
 }
 
 .picker {
-  width: 45%;
+  text-align: center;
+  display: block;
+  width: 25%;
+  margin-left: 10%;
   text-align: center;
   float: left;
   position: relative;
@@ -67,6 +74,17 @@ h1, h2, h3 {
   background: #8EC9D2;
 }
 
+.play-song {
+  padding: 1em;
+  background: #8EC9D2;
+  color: #333;
+  font-size: 1em;
+  margin-top: 1em;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 .house {
   position: relative;
   fill: #d8db9c;
@@ -82,6 +100,7 @@ h1, h2, h3 {
 
 .house__choose-colour {
   font-style: italic;
+  display: block;
   color: #8EC9D2;
 }
 
@@ -93,6 +112,15 @@ h1, h2, h3 {
   font-size: .6em;
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+@media screen and (max-width: 600px) {
+  .description,
+  .picker {
+    text-align: center;
+    width: 100%;
+    clear: both;
+  }
 }
 
 /*
